--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Pattern Library 
 ---
     <div class="home-wrap">
-        
-        {% include header.html %}
+        <section>
+             {% include header.html %}
+        </section>
 
+        <section>
+            <h1>Hero-1</h1>
+             {% include hero.html %}
+        </section>
 
-
-        </div>
     </div>
+   
