--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@ title: Pattern Library
 
         <section>
             <h1>Hero-1</h1>
-             {% include hero.html %}
+             {% include hero-1.html %}
+
+            <h1>Hero-2</h1>
+             {% include hero-2.html %}
         </section>
 
     </div>
