Added Hero 1, Hero 2, Center text, Gallery block 1

--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@ title: Pattern Library
         <section>
             <h1>Hero-1</h1>
              {% include hero-1.html %}
-
+        </section>
+            
+        <section>    
             <h1>Hero-2</h1>
              {% include hero-2.html %}
+        </section>
+
+         <section>    
+            <h1>Center  text </h1>
+             {% include center-txt.html %}
+        </section>
+
+        <section>    
+            <h1>Gallery block - 1  </h1>
+             {% include gallery-block-1.html %}
         </section>
 
     </div>
