Reorganised the file structure

--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@ title: Pattern Library
              {% include gallery-block-1.html %}
         </section>
 
+        <section>    
+            <h1>Gallery block - 2  </h1>
+             {% include gallery-block-2.html %}
+        </section>
+
     </div>
    
