--- a/index.html
+++ b/index.html
@@ -32,5 +32,15 @@ title: Pattern Library
              {% include gallery-block-2.html %}
         </section>
 
+        <section>    
+            <h1>Gallery block - 3  </h1>
+             {% include gallery-block-3.html %}
+        </section>
+
+        <section>    
+            <h1>Gallery block - 4 </h1>
+             {% include gallery-block-4.html %}
+        </section>
+
     </div>
    
