--- a/index.html
+++ b/index.html
@@ -42,5 +42,17 @@ title: Pattern Library
              {% include gallery-block-4.html %}
         </section>
 
+        <section>    
+            <h1>Gallery block - 5 </h1>
+             {% include gallery-block-5.html %}
+        </section>
+
+        <section>    
+            <h1>Gallery block - 6 </h1>
+             {% include gallery-block-6.html %}
+        </section>
+
+
+
     </div>
    
