--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@ title: Pattern Library
              {% include gallery-block-6.html %}
         </section>
 
+         <section>    
+            <h1>Gallery block - 7 </h1>
+             {% include gallery-block-7.html %}
+        </section>
+
+        <section>    
+            <h1>Gallery block - 8 </h1>
+             {% include gallery-block-8.html %}
+        </section>
+
+
+        <section>    
+            <h1>Text - Block  - 2 </h1>
+             {% include text-block-2.html %}
+        </section>
+
+        <section>    
+            <h1>Text - Block  - 3 </h1>
+             {% include text-block-3.html %}
+        </section>
+
+
+
 
 
     </div>
