--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@ layout: default
 title: Pattern Library 
 ---
     <div class="home-wrap">
-        <section>
-             {% include header.html %}
+
+        <section>    
+            <h1>Header -1  </h1>
+             {% include header-1.html %}
         </section>
+
 
         <section>
             <h1>Hero-1</h1>
