--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ title: Pattern Library
              {% include header-1.html %}
         </section>
 
+        <section>    
+            <h1>Header -2  </h1>
+             {% include header-2.html %}
+        </section>
 
         <section>
             <h1>Hero-1</h1>
