--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@ title: Pattern Library
              {% include header-2.html %}
         </section>
 
+        <section>    
+            <h1>Header -3 </h1>
+             {% include header-3.html %}
+        </section>
+
+
         <section>
             <h1>Hero-1</h1>
              {% include hero-1.html %}
